--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,22 +24,10 @@
             <div class="collapse navbar-collapse d-flex justify-content-end fs-4" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/listTeachers}">Teachers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/listLessons}">Lessons</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" th:href="@{/about}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/calcAvgTeacherSalary}">SalaryCalculator</a>
-                    </li>
-                    <li class="nav-item" th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-                        <a class="nav-link active" aria-current="page" th:href="@{/users}">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
                     </li>
                 </ul>
             </div>
